Add game title to README

--- a/.gitignore
+++ b/.gitignore
@@ -72,11 +72,8 @@ InitTestScene*.unity
 
 
 ### vscode ###
+.vscode/
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
 *.code-workspace
 
 # End of https://www.toptal.com/developers/gitignore/api/unity,vscode
